# PythonTraining

./: DjangoRestFramework.md  Middleware.md  PythonTraining.md  PythonTrainingDjangoPart1.md  PythonTrainingDjangoPart2.md  PythonTrainingPart2.md  PythonTrainingPart3PIPandPackages.md  PythonTrainingPart4.md  PythonTrainingPart5.md  WebApplicationBasics.md
django-polls/: LICENSE  django-polls.rst  setup.cfg
django-polls/django_polls.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
django-polls/polls2/: admin.py  models.py  tests.py  views.py
django-polls/polls2/templates/polls/: index.html
mypollingwebapp/: db.sqlite3
mypollingwebapp/mypollingwebapp/: settings.py
mypollingwebapp/polls2/: models.py  tests.py  urls.py  views.py
mypollingwebapp/polls2/templates/polls/: detail.html  index.html
